--- a/TeamsMessageExtennsion/teams_app_manifest/manifest.json
+++ b/TeamsMessageExtennsion/teams_app_manifest/manifest.json
@@ -2,7 +2,7 @@
     "$schema": "https://developer.microsoft.com/en-us/json-schemas/teams/v1.14/MicrosoftTeams.schema.json",
     "manifestVersion": "1.14",
     "version": "1.0",
-    "id": "<<YOUR-MICROSOFT-APP-ID>>",
+    "id": "ec08a649-17fc-4179-a18c-6933c50fdd00",
     "packageName": "com.microsoft.teams.samples.searchExtension",
     "developer": {
       "name": "Microsoft Corp",
@@ -22,10 +22,10 @@
       "outline": "icon-outline.png",
       "color": "icon-color.png"
     },
-    "accentColor": "#abcdef",
+    "accentColor": "#4464ee",
     "composeExtensions": [
       {
-        "botId": "<<YOUR-MICROSOFT-APP-ID>>",
+        "botId": "ec08a649-17fc-4179-a18c-6933c50fdd00",
         "canUpdateConfiguration": true,
         "commands": [
           {
