--- a/ESOScraping/.vscode/settings.json
+++ b/ESOScraping/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-	"azureFunctions.deploySubpath": "ESOScraping",
+	"azureFunctions.deploySubpath": ".",
 	"azureFunctions.scmDoBuildDuringDeployment": true,
 	"azureFunctions.pythonVenv": ".venv",
 	"azureFunctions.projectLanguage": "Python",
